# codespector

./: Makefile  pyproject.toml
.github/workflows/: reviewer.yml  tests.yml
cicd_examples/: .github-ci.yml
codespector/: codespector.py  controller.py  default.py  errors.py  main.py  reviewer.py
codespector/cli/: __init__.py  ai.py  main.py  prepare.py  report.py  review.py
codespector/clients/: codestral.py
codespector/codespectors/: base.py  git_link.py  local.py
codespector/local/: main.py  prepare.py
codespector/prepare/: git_link.py  local.py
tests/unit/: test_codespector.py  test_reviewer.py
