[project]
name = "codespector"
version = "0.1.0"
description = "Assistant for reviewing your code"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
]

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
ignore = ["F401"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
